Bug 165615 - Slow loading speed of docx document with nested tables
Summary: Slow loading speed of docx document with nested tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: Writer-Tables-Nested
  Show dependency treegraph
 
Reported: 2025-03-06 15:57 UTC by Amin Irgaliev
Modified: 2025-10-20 15:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Problematic document with a nested table (11.69 KB, application/wps-office.docx)
2025-03-06 15:59 UTC, Amin Irgaliev
Details
forum-mso-de-81722.docx (39.51 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-03-26 00:58 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Amin Irgaliev 2025-03-06 15:57:53 UTC
Description:
When opening an attached docx document that contains one nested table within another table, it takes a long time to open. Opening such documents can take from 2 to 10 minutes or more, depending on the device configuration.

It seems that the problem appeared between 7.6 and 24.2, after the addition of floating table support.

Steps to Reproduce:
Open attached docx document

Actual Results:
The document will take a long time to open.

Expected Results:
The document will open quickly


Reproducible: Always


User Profile Reset: No

Additional Info:

Repro with:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 38a4d3f0b095f70deaf1c25617b5f8b378f31626
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Amin Irgaliev 2025-03-06 15:59:10 UTC
Created attachment 199669 [details]
Problematic document with a nested table
Comment 2 mikhail.machine 2025-03-10 11:20:35 UTC
Hello Amin Irgaliev,

Thank you for reporting the bug. I can confirm that the bug is present in master.

Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded

During opening the file LO Calc and Wtiter stop responding.
Comment 3 raal 2025-03-10 14:29:33 UTC
Confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7c806a668530f25730717a12e6f97972f69d9c09
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works in Version: 7.3.7.2
Comment 4 raal 2025-03-10 14:40:59 UTC Comment hidden (obsolete)
Comment 5 Buovjaga 2025-03-19 08:48:19 UTC
Looks like this started with ce2fc5eb29b4e252993b549dee002fa8948c8386
tdf#158341 sw floattable: fix layout loop when fly is below the body frame
Comment 6 Miklos Vajna 2025-03-20 08:36:31 UTC
Thanks for the bisect.

By now I think there are some 7 sw floattable bugs like this in the bugzilla. Unfortunately these are far from trivial to fix. I hope to find time to progress with them in the not too distant future.
Comment 7 Aron Budea 2025-03-26 00:58:50 UTC
Created attachment 200019 [details]
forum-mso-de-81722.docx

Another sample affected by this commit: forum-mso-de-81722.docx.

For the record, Word considers the first attachment, attachment 199669 [details] corrupt, and only opens it after recovery.
Comment 8 Miklos Vajna 2025-10-14 14:22:49 UTC
FWIW, there was an attempt to just disable nested floating tables at https://gerrit.libreoffice.org/c/core/+/188109, but that got abandoned in the meantime.

(In reply to Aron Budea from comment #7)
> Another sample affected by this commit: forum-mso-de-81722.docx.

Thanks, let me see this one.

> For the record, Word considers the first attachment, attachment 199669 [details]
> [details] corrupt, and only opens it after recovery.

Oh, then probably your new sample is better, let's focus on that in this bug.
Comment 9 Commit Notification 2025-10-15 18:21:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/72e79a4d75cbbc8615fe9815bbbe9a38780ff856

tdf#165615 sw floattable, no overlap: avoid check against an own follow

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-10-20 15:34:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e2b2ecad7a0ffdf1e0c34ec70c1987698971cbad

tdf#165615 sw floattable, no overlap: avoid check against an own follow

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.